--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
     "require": {
         "php" : ">=7.2"
     },
+	"require-dev": {
+		"fzaninotto/faker": "^1.9@dev",
+		"mikey179/vfsstream": "1.6.*",
+		"phpunit/phpunit": "^8.5"
+	},
 	"autoload": {
 		"psr-4": {
 			"wepe\\wepetables\\": "src/"
